--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
 
       // // Initialize Firebase
       // firebase.initializeApp(firebaseConfig);
-
+      var firebaseConfig = {
+      apiKey: "AIzaSyBLrtk5s5Mj3HbDwh0R1IEDpPMCsuIl7aw",
+      authDomain: "cargame-updated.firebaseapp.com",
+      databaseURL: "https://cargame-updated.firebaseio.com",
+      projectId: "cargame-updated",
+      storageBucket: "cargame-updated.appspot.com",
+      messagingSenderId: "262132808833",
+      appId: "1:262132808833:web:9c979571d9f4558e74e180"
+  };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     </script>
